--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
+    "docx": "^9.5.1",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "next-auth": "^5.0.0-beta.29",
