--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "axios": "^1.13.1",
+    "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
@@ -25,6 +28,7 @@
     "next": "15.5.4",
     "next-auth": "^5.0.0-beta.29",
     "postgres": "^3.4.7",
+    "puppeteer": "^24.27.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
